[package]
name = "fly-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "multipart", "brotli", "gzip", "deflate"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
url = { version = "2.3.1", features = ["serde"] }
